tests/toylang/neg/001392_mutation.toylang
program a = { var a : bool 0; } .
